cropping pictures; preventing from adding another one with same date

--- a/src/styles/datepicker.scss
+++ b/src/styles/datepicker.scss
@@ -8,13 +8,14 @@ $grey-light: #CBD1CD;
 $grey-dark: #B7BCB9;
 
 .picker {
-  width: 200px;
   box-sizing: border-box;
 
   font-family: 'Droid Sans', sans-serif;
   font-size: 14px;
 
   background-image: url("../media/icons/calendar.svg") !important;
+
+  margin: 20px auto;
   padding-left: 15px;
 
   &:focus {
